@@ -36,22 +36,20 @@ trait SlickFormatterTrait {
     // Collects specific settings to this formatter.
     $this->entity = $entity;
     $settings = $this->buildSettings();
-
-    // Pass first item to optimize sizes and build colorbox/zoom-like gallery.
-    if (method_exists($this, 'getImageItem') && $image = $this->getImageItem($entities[0])) {
-      $settings['first_item'] = $image['item'];
-      $settings['first_uri'] = $image['item']->uri;
-    }
-
     $build = ['settings' => $settings];
-    $this->formatter()->buildSettings($build, $items, $entity);
+
+    // Modifies settings before building elements.
+    $this->formatter()->preBuildElements($build, $entities, $entity);
 
     // Build the elements.
     $this->buildElements($build, $entities);
 
+    // Modifies settings post building elements.
+    $this->formatter()->postBuildElements($build, $entities, $entity);
+
     // Supports Blazy multi-breakpoint images if provided.
     // @todo move it into ::build() as moved to base class.
-    if (isset($build['items'][0]) && empty($settings['vanilla'])) {
+    if (isset($build['items'][0]) && !empty($settings['check_blazy'])) {
       $this->formatter()->isBlazy($build['settings'], $build['items'][0]);
     }
     // If using 0, or directly passed like D8, taken over by theme_field().
